# swf

./: LICENSE  pyproject.toml
resources/: ipython_default.py
src/: __init__.py
tests/: test_deepcache.py  test_traverse.py
