[project]
name = "swf"
requires-python = ">=3.9"
version = "2024.0"
dependencies = [
    "pytest>=8.4.2",
]

[tool.setuptools]
packages = ["swf"]

[tool.setuptools.package-dir]
swf = "src"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
